[package]
name = "IronOxide"
version = "0.1.0"
authors = ["Isaac Badipe <isaac.badipe@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
csv = "1.1"
serde = { version = "1", features = ["derive"] }
rand = "0.8.0"
serde_json = "0.8"
arrayvec = {version = "0.7", features = ["serde"]}